# flights

./: airports.json  airports_new.json  auto_complete.json  auto_complete.py  config.json  cz.json  everywhere.json  get_airports.py  get_config.py  get_skyids.py  pyproject.toml  search_everywhere.py  sky_ids.json
